# Project-cg-

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: world.frag  world.vert
assets/textures/: collectible.ppm  ground.ppm  player.ppm  wall.ppm
src/: main.cpp
